# langgraph-personal-agent

./: .env.example  .gitignore  ARCHITECTURE.md  DECISIONS.md  PROJECT_BRIEF.md  README.md  REQUIREMENTS.md  STATE.md  TASKS.md  pyproject.toml
app/: __init__.py  settings.py
app/cli/: main.py
app/graph/: builder.py  routing.py  state.py
app/graph/nodes/: action.py  common.py  confirmation.py  intent.py  planning.py  respond.py
app/memory/: __init__.py  service.py
app/models/: __init__.py  base.py
app/observability/: tracer.py
app/retrieval/: embeddings.py  service.py
app/services/: agent.py  session_store.py
app/storage/: db.py  files.py  vector_store.py
app/tools/: registry.py
configs/: settings.example.toml  settings.toml
docs/learning/: LANGGRAPH_PDF_PHASE0.md
logs/: 2026-03-25_v0.1.0_project_initialization.txt  2026-03-25_v0.1.1_vscode_env_and_logging.txt  2026-03-26_v0.2.0_interactive_cli_and_confirmation.txt  2026-03-26_v0.2.1_retrieval_metadata_filter.txt  2026-03-26_v0.3.0_confirmation_policy_and_file_inventory.txt  2026-03-26_v0.4.0_session_persistence_and_graph_planning.txt  LOGGING_RULES.txt
scripts/: bootstrap.ps1  new_update_log.ps1
tests/: test_agent.py
